corrected z-index issue with hamburger icon in active state

--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,7 @@ html {
 @media(max-width:768px) {
     .hamburger {
         display: block;
+        z-index: 1000;
     }
 
     .hamburger.active .hamburger__bar:nth-child(2) {
@@ -494,7 +495,7 @@ html {
 .footer {
     background-color: var(--navbar-bg);
     border-top: var(--border);
-    padding: 1.5rem 0;
+    padding: 1.2rem 0;
     margin-inline: auto;
 }
 
